force-app/main/default/objects/Project_Outputs__c/Project_Outputs__c.object-meta.xml
<CustomObject>
    <label>Project Output</label>
    <nameField>
        <displayFormat>Project Output - {0000}</displayFormat>
        <label>Title</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>