force-app/main/default/objects/Project_Outputs__c/fields/I_RS_Project_Output_Id__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Output_Id__c</fullName>
    <displayFormat>PO-{0000000}</displayFormat>
    <label>Project Output Id</label>
    <type>AutoNumber</type>
</CustomField>