force-app/main/default/objects/Project_Outputs__c/fields/I_RS_Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Proposal__c</fullName>
    <label>Project Proposal</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
        <errorMessage>Only projects where the main funding body is ARC or NHMRC can be linked to publications</errorMessage>
        <filterItems>
            <field>Project_Proposal__c.I_RS_Account_Organisation__r.Name</field>
            <operation>equals</operation>
            <value>Australian Research Council</value>
        </filterItems>
        <filterItems>
            <field>Project_Proposal__c.I_RS_Account_Organisation__r.Name</field>
            <operation>equals</operation>
            <value>National Health and Medical Research Council</value>
        </filterItems>
        <filterItems>
            <field>Project_Proposal__c.I_RS_Account_Organisation__r.Name</field>
            <operation>equals</operation>
            <value>ARC</value>
        </filterItems>
        <filterItems>
            <field>Project_Proposal__c.I_RS_Account_Organisation__r.Name</field>
            <operation>equals</operation>
            <value>NHMRC</value>
        </filterItems>
        <filterItems>
            <field>Project_Proposal__c.I_RS_Record_Type_Developer_Name__c</field>
            <operation>equals</operation>
            <value>I_RS_Project</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Project Outputs</relationshipLabel>
    <relationshipName>Project_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>