force-app/main/default/objects/Project_Outputs__c/fields/I_RS_Research_Output__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Research_Output__c</fullName>
    <label>Research Output</label>
    <referenceTo>Research_Output__c</referenceTo>
    <relationshipLabel>Project Outputs</relationshipLabel>
    <relationshipName>Project_Outputs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>