force-app/main/default/objects/Project_Outputs__c/validationRules/Only_ARC_and_NHMRC_can_be_linked.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_ARC_and_NHMRC_can_be_linked</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name = &apos;Australian Research Council&apos; 
      ||
I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name = &apos;ARC&apos;
      ||
I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name = &apos;National Health and Medical Research Council&apos; 
      ||
I_RS_Project_Proposal__r.I_RS_Account_Organisation__r.Name = &apos;NHMRC&apos; )</errorConditionFormula>
    <errorDisplayField>I_RS_Project_Proposal__c</errorDisplayField>
    <errorMessage>Only projects where the main funding body is ARC or NHMRC can be linked to Research Outputs.</errorMessage>
</ValidationRule>